# docs/swagger.json
@@ -52,40 +52,6 @@
                 }
             }
         },
-        "/auth/logout": {
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "AUTH"
-                ],
-                "summary": "Logout",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
         "/auth/refresh": {
             "post": {
                 "consumes": [
@@ -131,6 +97,45 @@
                 }
             }
         },
+        "/data/logout": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "USER"
+                ],
+                "summary": "Logout",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/data/me/": {
             "get": {
                 "security": [
@@ -143,6 +148,9 @@
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "USER"
                 ],
                 "summary": "Get user's UUID",
                 "responses": {
@@ -165,6 +173,9 @@
     "definitions": {
         "models.AuthSwag": {
             "type": "object",
+            "required": [
+                "uuid"
+            ],
             "properties": {
                 "uuid": {
                     "type": "string",
@@ -174,6 +185,10 @@
         },
         "models.RefreshSwag": {
             "type": "object",
+            "required": [
+                "jwt",
+                "refresh"
+            ],
             "properties": {
                 "jwt": {
                     "type": "string",
