# transport/models/models.go
@@ -2,13 +2,13 @@ package models
 
 type (
 	AuthSwag struct {
-		Uuid string `json:"uuid" example:"uuid" binding:"uuid"`
+		Uuid string `json:"uuid" example:"uuid" binding:"required"`
 	}
 	RefreshSwag struct {
-		Jwt     string `json:"jwt" example:"jwt" binding:"jwt"`
-		Refresh string `json:"refresh" example:"refresh" binding:"refresh"`
+		Jwt     string `json:"jwt" example:"jwt" binding:"required"`
+		Refresh string `json:"refresh" example:"refresh" binding:"required"`
 	}
 	JwtSwag struct {
-		Jwt string `json:"jwt" example:"jwt" binding:"jwt"`
+		Jwt string `json:"jwt" example:"jwt" binding:"required"`
 	}
 )
