# transport/routes/data_routes.go
@@ -6,14 +6,14 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-//	@Summary	Get user's UUID
-//	@Tag		USER
-//	@Accept		json
-//	@Produce	json
-//	@Success	200			{string}	string
-//	@Failure	400			{string}	string
-//	@Router		/data/me/ 	[get]
-//	@Security	ApiKeyAuth
+// @Summary	Get user's UUID
+// @Tags	USER
+// @Accept	json
+// @Produce	json
+// @Success	200			{string}	string
+// @Failure	400			{string}	string
+// @Router		/data/me/ 	[get]
+// @Security	ApiKeyAuth
 func GetUUID(c *gin.Context) {
 	data := app.NewDataService()
 	resp, err := data.GetUserData(c.GetString("id"))
@@ -22,4 +22,29 @@ func GetUUID(c *gin.Context) {
 		return
 	}
 	c.JSON(200, gin.H{"user": resp})
+}
+
+// @Summary	Logout
+// @Tags	USER
+// @Accept	json
+// @Produce	json
+// @Success	200	{string}	string
+// @Failure	400	{string}	string
+// @Failure	404	{string}	string
+// @Router		/data/logout [post]
+// @Security	ApiKeyAuth
+func Logout(c *gin.Context) {
+
+	service := app.NewAuthService()
+	is_logout, err := service.Logout(c.GetString("id"))
+	if err != nil {
+		c.JSON(400, gin.H{"error": err.Error()})
+		return
+	}
+	if is_logout {
+		c.JSON(200, gin.H{"result": "ok"})
+	} else {
+		c.JSON(400, gin.H{"result": "error"})
+	}
+
 }
